samples/_failures_safe/1761185364_109fa8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1e20f02.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b1e20f02.c:182:9: error: expected expression at end of input
  182 |         else if (parse_identifier(input, &pos, &token))
      |         ^~~~
./samples/SAFE/__tmp_b1e20f02.c:182:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b1e20f02.c:182:9: error: expected declaration or statement at end of input
